--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.15&key=254bd42f3f4e2a03c80763b3f5b4e99f&plugin=Map3D"></script> 
-    <title>rex-hs-screen</title>
+    <title>map-screen</title>
   </head>
   <body>
     <noscript>
